# Real-Time-ML-Telemetry-Pipeline

./: .gitignore  README.md
engine/: CMakeLists.txt  training.omlog.anomalies
engine/incl/: adaptive_sampler.hpp  anomaly_detector.hpp  metrics_server.hpp  mmap_log.hpp  pipeline.hpp  replay_engine.hpp  ring_buffer.hpp  types.hpp  ws_broadcaster.hpp  zmq_receiver.hpp
engine/src/: anomaly_detector.cpp  main.cpp  metrics_server.cpp  mmap_log.cpp  pipeline.cpp  replay_engine.cpp  ws_broadcaster.cpp  zmq_receiver.cpp
engine/tests/: adaptive_sampler_test.cpp  anomaly_detector_test.cpp  ring_buffer_test.cpp
schema/: training_event.fbs
trainer/: becnhmark_hook.py  emitter.py  hook.py  latency_probe.py  latest_topology.json  requirements.txt  serialise.py  test_emitter.py  test_phase2.py  train_gnn.py  train_mnist.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: EmbeddingProjection.tsx  EnginePanel.tsx  GNNGraph.tsx  LayerExplorer.tsx  MetricChart.tsx  NetworkGraph.tsx  ReplayScrubber.tsx  StatusBar.tsx
ui/src/hooks/: useMetrics.ts  useReplay.ts  useStream.ts
